@@ -63,6 +63,7 @@
 #define ZSF_SMS_RAMBLOCK 37
 #define ZSF_SMS_CONF 38
 #define ZSF_SMS_CRAM 39
+#define ZSF_ACE_CONF 40
 
 #define MAX_ZSF_SNAPSHOT_SIZE 1024*1024*16
 
